--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 
-.transition{
-    transition: 1s;
-}
+/* custom scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #1e1e1f;
+    box-shadow: 1px 1px 5px #39393a;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #FFC254;
+  }
