--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,6 @@
     border: 1px solid #1e1e1f;
     background-color: transparent;
     width: 100%;
-    font-size: 15px;
     color: rgb(250 250 250);
     font-weight: normal;
     margin-bottom: 10px;
@@ -47,7 +46,10 @@
     ), hsl(240, 2%, 13%);
   }
 
-  .custom-icon {
-    color: #ffc254 !important; /* Use !important to override any inline or default styles */
+  @media (min-width: 500px) {
+    .xs {
+      position: absolute;
+      bottom: 0;
+      right: 39%;
+    }
   }
-  
